--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "devDependencies": {
     "@types/node-fetch": "^2.6.2",
     "@types/qs": "^6.9.7",
+    "@typescript-eslint/eslint-plugin": "^5.30.0",
+    "@typescript-eslint/parser": "^5.30.0",
+    "eslint": "^8.18.0",
     "typescript": "^4.7.4",
     "vitest": "^0.16.0"
   },
