--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@typescript-eslint/parser": "^5.30.7",
     "eslint": "^8.20.0",
     "rollup": "^2.77.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-visualizer": "^5.7.1",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4",
     "vitest": "^0.16.0"
