--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -13,8 +13,9 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Run tests and collect coverage
-        run: npm run test
+        run: npm run coverage
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
           token: ${{secrets.CODECOV_TOKEN}}
+          files: ./coverage/lcov.info
