--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build": "rollup -c rollup.config.ts",
     "test": "vitest",
     "coverage": "vitest run --coverage",
-    "pub": "pnpx nrm use npm | pnpm publish --access public | pnpx nrm use taobao"
+    "pub": "pnpx nrm use npm | pnpm publish --access public | pnpx nrm use taobao",
+    "lint": "eslint ."
   },
   "type": "module",
   "sideEffects": false,
@@ -38,14 +39,13 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@lzy1960/eslint-config": "^0.0.14",
     "@rollup/plugin-typescript": "^8.5.0",
     "@types/node-fetch": "^2.6.2",
     "@types/qs": "^6.9.7",
-    "@typescript-eslint/eslint-plugin": "^5.36.2",
-    "@typescript-eslint/parser": "^5.36.2",
     "@vitest/coverage-c8": "^0.23.2",
     "c8": "^7.12.0",
-    "eslint": "^8.23.0",
+    "eslint": "^8.23.1",
     "rollup": "^2.79.0",
     "rollup-plugin-gzip": "^3.0.1",
     "rollup-plugin-terser": "^7.0.2",
