chore: 更新pkg工作流

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "url": "git://github.com/lzy1960/google-translate.git"
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/@lzy1960"
+    "@lzy1960:registry": "https://npm.pkg.github.com"
   },
   "license": "MIT",
   "devDependencies": {
