chore: 更新pkg工作流

--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -30,12 +30,11 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-          registry-url: https://npm.pkg.github.com/
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
           version: 9
       - run: pnpm install
-      - run: pnpm publish
+      - run: pnpm publish --registry=https://npm.pkg.github.com/
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
