--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -18,8 +18,11 @@ jobs:
         with:
           node-version: '20'
 
+      - name: Install pnpm
+        run: npm install -g pnpm
+
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install
 
       - name: Generate release notes
         id: generate_release_notes
@@ -41,6 +44,6 @@ jobs:
           prerelease: false
 
       - name: Publish package
-        run: npm publish
+        run: pnpm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
