--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -10,10 +10,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v2
-
-      - name: Set up Node.js
+      - name: Set up Node 20
         uses: actions/setup-node@v3
         with:
           node-version: 20
@@ -44,6 +43,6 @@ jobs:
           prerelease: false
 
       - name: Publish package
-        run: pnpm publish
+        run: pnpm publish --no-git-checks
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
