--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -10,9 +10,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v2
-      - name: Set up Node 20
+
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 20
@@ -43,6 +44,6 @@ jobs:
           prerelease: false
 
       - name: Publish package
-        run: pnpm publish --no-git-checks
+        run: pnpm publish --access public
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
