chore: 更新pkg工作流

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -44,6 +44,6 @@ jobs:
           prerelease: false
 
       - name: Publish package
-        run: pnpm publish --access public
+        run: pnpm publish --no-git-checks
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
