--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "vitest": "^0.22.1"
   },
   "dependencies": {
+    "https-proxy-agent": "^7.0.6",
     "node-fetch": "^3.2.10",
     "qs": "^6.11.0"
   }
