--- a/package.json
+++ b/package.json
@@ -2,15 +2,14 @@
   "name": "@lzy1960/google-translate",
   "version": "0.4.3",
   "description": "Translate api for Google Translate",
-  "main": "lib/guide-google-translate.mjs.js",
-  "common": "lib/guide-google-translate.cjs",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
+  "types": "dist/index.d.ts",
   "files": [
-    "lib",
-    "types"
+    "dist"
   ],
   "scripts": {
-    "build": "rollup -c rollup.config.ts && pnpm build:tsc",
-    "build:tsc": "tsc --project tsconfig.build.json",
+    "build": "rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript",
     "test": "vitest",
     "coverage": "vitest run --coverage",
     "release": "bumpp package.json --commit --push --tag",
@@ -37,25 +36,27 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@lzy1960/eslint-config": "^0.0.14",
-    "@rollup/plugin-typescript": "^8.5.0",
-    "@types/node-fetch": "^2.6.2",
-    "@types/qs": "^6.9.7",
-    "@vitest/coverage-c8": "^0.23.4",
-    "bumpp": "^8.2.1",
-    "c8": "^7.12.0",
-    "eslint": "^8.25.0",
-    "rollup": "^2.79.1",
-    "rollup-plugin-gzip": "^3.0.1",
+    "@lzy1960/eslint-config": "^0.2.3",
+    "@rollup/plugin-typescript": "^12.1.2",
+    "@types/node-fetch": "^2.6.12",
+    "@types/qs": "^6.9.18",
+    "@vitest/coverage-v8": "^3.0.5",
+    "bumpp": "^10.0.2",
+    "c8": "^10.1.3",
+    "eslint": "^8.57.1",
+    "rollup": "^4.34.6",
+    "rollup-plugin-dts": "^6.1.1",
+    "rollup-plugin-gzip": "^4.0.1",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-visualizer": "^5.8.2",
-    "tslib": "^2.4.0",
-    "typescript": "^4.8.4",
-    "vitest": "^0.22.1"
+    "rollup-plugin-typescript2": "^0.36.0",
+    "rollup-plugin-visualizer": "^5.14.0",
+    "tslib": "^2.8.1",
+    "typescript": "^5.7.3",
+    "vitest": "^3.0.5"
   },
   "dependencies": {
     "https-proxy-agent": "^7.0.6",
-    "node-fetch": "^3.2.10",
-    "qs": "^6.11.0"
+    "node-fetch": "^3.3.2",
+    "qs": "^6.14.0"
   }
 }
