--- a/package.json
+++ b/package.json
@@ -38,6 +38,12 @@
   "devDependencies": {
     "@lzy1960/eslint-config": "^0.2.3",
     "@rollup/plugin-typescript": "^12.1.2",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^13.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^11.0.1",
+    "@semantic-release/npm": "^12.0.1",
+    "@semantic-release/release-notes-generator": "^14.0.3",
     "@types/node-fetch": "^2.6.12",
     "@types/qs": "^6.9.18",
     "@vitest/coverage-v8": "^3.0.5",
@@ -50,6 +56,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.36.0",
     "rollup-plugin-visualizer": "^5.14.0",
+    "semantic-release": "^24.2.2",
     "tslib": "^2.8.1",
     "typescript": "^5.7.3",
     "vitest": "^3.0.5"
