--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,45 +2,60 @@ name: Release
 
 on:
   push:
-    tags:
-      - 'v*'
+  pull_request:
 
 jobs:
-  release:
+  codecov:
     runs-on: ubuntu-latest
-
+    if: github.event_name == 'push' || github.event_name == 'pull_request'
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
-      - name: Set up Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20'
-
+          node-version: 20
       - name: Install pnpm
         run: npm install -g pnpm
-
       - name: Install dependencies
         run: pnpm install
+      - name: Run tests and collect coverage
+        run: pnpm run coverage
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./coverage/lcov.info
 
+  release:
+    runs-on: ubuntu-latest
+    needs: codecov
+    if: github.event_name == 'push' && contains(github.ref, 'refs/tags/v')
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
+      - name: Install pnpm
+        run: npm install -g pnpm
+      - name: Install dependencies
+        run: pnpm install
       - name: Run Build
         run: pnpm build
-
       - name: Publish to npm
         run: |
           echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
           pnpm publish --no-git-checks
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-
       - name: Publish to GitHub Packages
         run: |
           echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> ~/.npmrc
           pnpm publish --registry=https://npm.pkg.github.com --no-git-checks
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Get commits between tags
         id: commits
         run: |
@@ -52,7 +67,7 @@ jobs:
           echo "Comparing commits between $FROM_TAG and $TO_TAG"
 
           # 获取提交日志并根据类型格式化
-          COMMITS=$(git log --oneline $FROM_TAG..$TO_TAG^ --pretty=format:"%s")
+          COMMITS=$(git log --oneline $FROM_TAG..$TO_TAG --pretty=format:"%s")
 
           # 格式化并按提交类型分组
           FEAT_COMMITS=$(echo "$COMMITS" | grep -i "^feat" | sed 's/^feat: //')
@@ -77,11 +92,9 @@ jobs:
 
           # 输出 release notes 作为 action output
           echo "::set-output name=release_notes::$RELEASE_NOTES"
-
       - name: Generate Release Notes
         run: |
           echo "Release Notes for ${{ steps.commits.outputs.release_notes }}"
-
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
