--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lzy1960/google-translate",
-  "version": "0.5.0",
+  "version": "0.5.1-beta.3",
   "description": "Translate api for Google Translate",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
